# Wise-activate

./: .gitignore  README.md  TRAINING_ON_COLAB.md  debug_model.py  main.py  pyproject.toml  requirements.txt
hf_wake_word/: inference_ast.py  requirements.txt  train_ast.py
scripts/: convert_to_tfjs.ipynb  debug_audio_processing.py  debug_mic_record.py  debug_voices.py  download_tflite_deps.py  gcp_tts.py  generate_background_only.py  generate_dataset.py  generate_hard_negatives.py  generate_sequence_data.py  live_inference.py  organize_data.py  phrases.py  prepare_oww_data.py  record_negatives.py  record_user_samples.py  run_web.py  zip_for_colab.py
scripts/inference/: infer_sequence.py  infer_standard.py
testing/: test_model.py
training/: colab_notebook.py  colab_oww_quickstart.py  kaggle_notebook.py  local_train.py  train.py  train_oww.py  train_sequence.py  wakeword_model.h5
training/oww_configs/: hello_deepa.yaml  hello_namaste_deepa.yaml  namaste_deepa.yaml
web/: app.js  app_sequence.js  index.html  wakeword_model.tflite
wise_ui_test/: namaste_hello_deepa.onnx  test_local_onnx.py  test_namaste.html  test_pipeline_browser.html
