[project]
name = "wise-activate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "audiomentations>=0.43.1",
    "edge-tts>=7.2.7",
    "google-cloud-texttospeech>=2.34.0",
    "joblib>=1.5.3",
    "librosa>=0.11.0",
    "numpy<2.0.0",
    "onnxruntime>=1.24.1",
    "openwakeword>=0.4.0",
    "pydub>=0.25.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "tqdm>=4.67.3",
]
